<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    >

    <TextView
        android:text="@string/acerca_de"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="30dp"
        android:layout_gravity="center" />

    <TextView
        android:text="@string/texto_acerca_autor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:textSize="20sp"/>

    <TextView
        android:text="@string/texto_acerca_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textSize="20sp" />

    <Button
        android:text="@string/boton_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/boton_InfoVolver"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />

</LinearLayout>