<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="carlosperez.pmdm.Activity_Registro">

    <TextView

        android:id="@+id/textView_TituloRegistro"
        android:text="@string/textview_tituloregistro"


        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@color/colorRojo" />

    <EditText

        android:id="@+id/editText_Nombre"
        android:hint="@string/nombre"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textView_TituloRegistro"
        android:layout_alignRight="@+id/textView_TituloRegistro"
        android:layout_alignEnd="@+id/textView_TituloRegistro"
        android:layout_marginTop="5dp" />

    <EditText

        android:id="@+id/editText_Email"
        android:hint="@string/email"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="9"
        android:layout_below="@+id/editText_Nombre"
        android:layout_alignLeft="@+id/editText_Nombre"
        android:layout_alignStart="@+id/editText_Nombre"
        android:layout_marginTop="5dp" />

    <EditText

        android:id="@+id/editText_Edad"
        android:hint="@string/edad"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="9"
        android:layout_below="@+id/editText_Email"
        android:layout_alignLeft="@+id/editText_Email"
        android:layout_alignStart="@+id/editText_Email"
        android:layout_marginTop="5dp"
        android:focusable="false"
        android:clickable="true"
        android:maxLines="1"

        />


    <Button

        android:id="@+id/boton_Validar"
        android:text="@string/boton_validar"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_Edad"
        android:layout_alignLeft="@+id/editText_Edad"
        android:layout_alignStart="@+id/editText_Edad"
        android:layout_marginTop="5dp"
        android:onClick="validar_Datos"

        />

    <Button

        android:id="@+id/boton_Volver"
        android:text="@string/boton_volver"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/boton_Validar"
        android:layout_toRightOf="@+id/boton_Validar"
        android:layout_toEndOf="@+id/boton_Validar"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:onClick="boton_volver"/>

</RelativeLayout>